<resources>
    <string name="app_name">Option Pricing App</string>
    <string name="BlackScholestitle">Black Scholes Calculator</string>
    <string name="hintOptionPrice">100</string>
    <string name="optionPrice">Option Price</string>
    <string name="optionStrikePrice">Option Strike Price</string>
    <string name="date">Set expiration date</string>
    <string name="hintDay">16</string>
    <string name="hintMonth">August</string>
    <string name="hintYear">2021</string>
    <string name="riskFreeInterestRate">Risk free interest rate</string>
    <string name="volatility">Volatility</string>
    <string name="Calculate">Calculate</string>
    <string name="_150">150</string>
    <string name="_0_5">0.5</string>
    <string name="_1">1</string>
    <string name="_25">25</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="BinomialPricing">Binomial Calculator</string>
    <string name="NumberOfSteps">Number of steps</string>
    <string name="_100">100</string>
    <string name="binomial">Binomial</string>
    <string name="history">History</string>
    <string name="black_scholes">Black Scholes</string>
    <string name="monte_carlo_calculator">Monte Carlo Calculator</string>
    <string name="number_of_simulations">Number of simulations</string>
    <string name="call_option">Call Option</string>
    <string name="monte_carlo">Monte Carlo</string>
    <string name="share_price">Share Price</string>
    <string name="strike_price">Strike Price</string>
    <string name="time_to_maturity">Time to Maturity (in years)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baw">BAW</string>
    <string name="baw_calculator">BAW Calculator</string>
    <string name="dividends">Dividends</string>
    <string name="american_option">American Option</string>


</resources>