<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:background="#B4B8C5"
    android:orientation="vertical"
    tools:context=".Second_Frag">


        <TextView
            android:id="@+id/BlackScholesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/BinomialPricing"
            android:textSize="37sp"
            android:textColor="#6A656A"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/OptionPriceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#6A656A"
            android:text="@string/optionPrice"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/optionPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle"
            android:drawableLeft="@drawable/ic_dollar"
            android:gravity="end"
            android:padding="20dp"
            android:text=""
            android:textColor="#000000"
            android:drawableStart="@drawable/ic_dollar"
            android:hint="@string/_150"
            android:autofillHints="@string/_150"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/OptionStrikePriceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="#6A656A"
            android:text="@string/optionStrikePrice"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/optionStrikePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_dollar"
            android:background="@drawable/rectangle"
            android:gravity="end"
            android:padding="20dp"
            android:text=""
            android:textColor="#000000"
            android:drawableStart="@drawable/ic_dollar"
            android:hint="@string/_150"
            android:autofillHints="150"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/setDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="#6A656A"
            android:text="@string/date"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/optionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_calendar"
            android:background="@drawable/rectangle"
            android:gravity="end"
            android:padding="20dp"
            android:text=""
            android:textColor="#000000"
            android:drawableStart="@drawable/ic_calendar"
            android:hint="@string/_0_5"
            android:autofillHints="0.5"
            android:inputType="numberDecimal"
            tools:ignore="TextFields" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/riskFreeInterestRateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#6A656A"
                android:text="@string/riskFreeInterestRate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/riskFreeInterestRate"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle"
                android:drawableLeft="@drawable/ic_percent"
                android:gravity="end"
                android:padding="20dp"
                android:text=""
                android:textColor="#000000"
                android:hint="@string/_1"
                android:drawableStart="@drawable/ic_percent"
                android:autofillHints="1"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/volatilityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#6A656A"
                android:text="@string/volatility"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/volatility"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle"
                android:drawableLeft="@drawable/ic_percent"
                android:gravity="end"
                android:padding="20dp"
                android:text=""
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_percent"
                android:hint="@string/_25"
                android:autofillHints=""
                android:inputType="numberDecimal" />


            <TextView
                android:id="@+id/numOfStepsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#6A656A"
                android:text="@string/NumberOfSteps"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/numOfSteps"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle"
                android:gravity="end"
                android:padding="20dp"
                android:text=""
                android:textColor="#000000"
                android:hint="@string/_100"
                android:autofillHints=""
                android:inputType="number" />


            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="90dp"
                android:background="#6A656A"
                android:text="@string/Calculate"
                android:textColor="#FFFFFF" />

        </LinearLayout>


    </LinearLayout>

